--- a/app/src/main/res/layout/fragment_setup.xml
+++ b/app/src/main/res/layout/fragment_setup.xml
@@ -15,54 +15,46 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <Switch
-                android:id="@+id/switch_wifi"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:text="  Wi-Fi"
-                android:textSize="20sp" />
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_wifi_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:text="  已關閉"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_SetupBluetooth"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.95"
+                    android:text="藍芽"
+                    android:textAlignment="textStart"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    app:backgroundTint="#FFFFFF"
+                    app:cornerRadius="0dp"
+                    app:icon="@drawable/ic_bluetooth"
+                    app:iconPadding="16dp"
+                    app:iconSize="36dp"
+                    app:iconTint="#000000"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/textView10"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_wifi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
-
-            <Switch
-                android:id="@+id/switch_bluetooth"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginTop="8dp"
-                android:text="  藍牙"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/tv_bluetooth_status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:text="  已關閉"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_bluetooth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone" >
-
-            </androidx.recyclerview.widget.RecyclerView>
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.05"
+                    android:clickable="false"
+                    android:focusable="false"
+                    android:paddingRight="16dp"
+                    android:text="已關閉"
+                    android:textAlignment="textEnd"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -104,76 +96,6 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_SetupWiFi1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.95"
-                    android:text="Wi-Fi"
-                    android:textAlignment="textStart"
-                    android:textColor="#000000"
-                    android:textSize="24sp"
-                    app:backgroundTint="#FFFFFF"
-                    app:cornerRadius="0dp"
-                    app:icon="@drawable/ic_wifi"
-                    app:iconPadding="16dp"
-                    app:iconSize="36dp"
-                    app:iconTint="#000000" />
-
-                <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.05"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:paddingRight="16dp"
-                    android:text="已關閉"
-                    android:textAlignment="textEnd"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_SetupBluetooth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.95"
-                    android:text="藍芽"
-                    android:textAlignment="textStart"
-                    android:textColor="#000000"
-                    android:textSize="24sp"
-                    app:backgroundTint="#FFFFFF"
-                    app:cornerRadius="0dp"
-                    app:icon="@drawable/ic_bluetooth"
-                    app:iconPadding="16dp"
-                    app:iconSize="36dp"
-                    app:iconTint="#000000" />
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.05"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:paddingRight="16dp"
-                    android:text="已關閉"
-                    android:textAlignment="textEnd"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="20sp" />
-            </LinearLayout>
 
             <!--            <Button-->
 <!--                android:id="@+id/btn_SetupWiFi"-->
